# sheaf-convolution

./: .gitignore  Makefile  Makefile.colab  README.md  exp_real.py  exp_synthetic.py  main.py  optuna_search.py  pyproject.toml  test.ipynb  train.py  ttest.py  utils.py  utils_comet.py
config/: config.yaml  model_config.py
config/dataset/: hetero.yaml  synthetic.yaml
config/model/: Diffusion.yaml  GAE.yaml
data/graphs/: movielens1m.npz  ppi.npz
dataloader/: __init__.py  dataloader.py  dataloader_base.py  dataloader_hetero.py  dataloader_synthetic.py  other.py  synthetic.py
gpt/: baseline.py  main_gpt.py
metrics/: comet_logger.py  metrics.py
model/: baseline_model.py  decoders.py  laplacian_builder.py  maps_builder.py  model.py  preprocessor.py
notebooks/: optuna_results.ipynb  real_results.ipynb  synthetic_results.ipynb
