[project]
name = "sheaf_disffusion"
version = "0.1.0"
description = "shef gnn for edges prediction"
authors = [{name = "Artem Shamro, email = <adshamro@edu.hse.ru>"}]
requires-python = "==3.10.12"
dependencies = [
    "hydra-core==1.3.2",
    "optuna>=2.10.0,<3.0.0",
    "hydra-optuna-sweeper==1.2.0",
    "matplotlib==3.8.0",
    "networkx==3.3",
    "numpy>=1.21,<2",
    "omegaconf==2.3.0",
    "pandas>=2.2.3",
    "scikit_learn==1.4.1.post1",
    "torch==2.5.1",
    "torch_geometric==2.6.1",
    "torchmetrics==1.6.1",
    "tqdm==4.66.4",
    "comet-ml>=3.52.1",
    "seaborn>=0.13.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pyg-cu121"
url = "https://data.pyg.org/whl/torch-2.5.0+cu121.html"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
pyg-lib = [
  { index = "pyg-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torch-scatter = [
  { index = "pyg-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torch-sparse = [
  { index = "pyg-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torch-cluster = [
  { index = "pyg-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torch-spline-conv = [
  { index = "pyg-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[tool.flake8]
max-line-length = 120
